feat: add favicon to browser tab

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       content="Ludobotics - Game-Based Immersive ROS 2 Learning Platform"
     />
     <title>Ludobotics | A ROS 2 Odyssey</title>
+    <link rel="icon" type="image/png" href="/website/footer_logo.png" />
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
